<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered</string>
    <string name="not_registered">Not Registered</string>
    <string name="register_here">Register Here</string>
    <string name="click_here">Click Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="click_here">Click Here</string>
    <string name="to_register">To Register:</string>
    <string name="make_a_budget">Make a budget</string>
    <string name="budget_name">Budget Name</string>
    <string name="amount">Amount</string>
    <string name="item_name">Item Name</string>
    <string name="priority">Priority</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_name">Enter name</string>
    <string name="input_amount">Input amount</string>
</resources>
