<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_image">


    <TextView
        android:id="@+id/etEmail"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="423dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/trans_white"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="338dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/trans_white"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/etLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="259dp"
        android:layout_marginLeft="89dp"
        android:layout_marginStart="89dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="230dp"
        android:layout_marginEnd="-42dp"
        android:layout_marginLeft="88dp"
        android:layout_marginStart="88dp"
        android:text="@string/to_register"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etNewRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="226dp"
        android:layout_marginEnd="-151dp"
        android:layout_marginLeft="194dp"
        android:layout_marginStart="194dp"
        android:text="@string/click_here"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>