<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80c6c6c6">


    <TextView
        android:id="@+id/Budget"
        android:layout_width="434dp"
        android:layout_height="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/trans_white_rectangle"
        android:paddingLeft="70dp"
        android:paddingTop="12dp"
        android:text="@string/make_a_budget"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="-117dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="49dp"
        app:srcCompat="@drawable/Arrow" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="134dp"
        app:srcCompat="@drawable/Ellipse" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="146dp"
        app:srcCompat="@drawable/coins" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="108dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="122dp"
        android:text="@string/budget_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="-22dp"
        android:layout_marginLeft="304dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="126dp"
        android:text="@string/amount"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="209dp"
        android:text="@string/item_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="80dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="-76dp"
        android:layout_marginLeft="313dp"
        android:layout_marginStart="313dp"
        android:layout_marginTop="205dp"
        android:text="@string/priority"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etItemName"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="257dp"
        android:hint="@string/enter_item_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etItemName"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="295dp"
        android:hint="@string/enter_item_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etItemName"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="334dp"
        android:hint="@string/enter_item_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etItemName"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="375dp"
        android:hint="@string/enter_item_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etItemName"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="416dp"
        android:hint="@string/enter_item_name"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Addfloating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="194dp"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:clickable="true"
        app:backgroundTint="#0000ff"
        app:srcCompat="@drawable/add"
        android:focusable="true" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Addfloating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="190dp"
        android:layout_marginLeft="274dp"
        android:layout_marginStart="274dp"
        app:backgroundTint="#0000ff"
        android:clickable="true"
        app:srcCompat="@drawable/add" />



    <ImageView
        android:id="@+id/home"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:tint="#000000"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/time"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="133dp"
        android:layout_marginStart="133dp"
        android:tint="#000000"
        app:srcCompat="@drawable/time" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="233dp"
        android:layout_marginStart="233dp"
        android:tint="#000000"
        app:srcCompat="@drawable/add" />

    <ImageView
        android:id="@+id/man"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="350dp"
        android:layout_marginStart="350dp"
        android:tint="#000000"
        app:srcCompat="@drawable/man" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="118dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="147dp"
        android:ems="10"
        android:hint="@string/input_amount" />


</RelativeLayout>